TT-942: set fixed width on Verify logo on mobile
During signoff it was decided the logo should have a fixed width to rougly match the font size and not use percentage sizing

Solo: @jakubmiarka

--- a/app/assets/stylesheets/pages/_slides.scss
+++ b/app/assets/stylesheets/pages/_slides.scss
@@ -83,7 +83,7 @@
     }
 
     @include media(mobile) {
-      width: 40%;
+      width: 140px;
     }
   }
 
